tests/baselines/reference/asyncArrowFunction6_es6.errors.txt
tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction6_es6.ts(2,22): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction6_es6.ts (1 errors) ====
    
    var foo = async (a = await): Promise<void> => {
                         ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }